apps/5g-devops-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 5g-devops
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
