apps/5g-devops-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5g-devops-app
  namespace: 5g-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 5g-devops-app
  template:
    metadata:
      labels:
        app: 5g-devops-app
    spec:
      containers:
        - name: app
          image: docker.io/rkg1983/5g-devops-app:11
          ports:
            - containerPort: 80
