apps/5g-devops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 5g-devops-app
  namespace: 5g-devops
spec:
  selector:
    app: 5g-devops-app
  ports:
    - port: 80
      targetPort: 80
